新增微服务模块和日志模块

--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -13,6 +13,7 @@
     <groupId>io.javaboot</groupId>
     <artifactId>bootstrap</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <description>启动器</description>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -20,5 +21,33 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.javaboot</groupId>
+            <artifactId>log-starter</artifactId>
+        </dependency>
     </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.yml</include>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <!-- filtering：开启过滤，用指定的参数替换directory下的文件中的参数(eg. ${name}) -->
+                <filtering>true</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.yml</include>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <!-- filtering：开启过滤，用指定的参数替换directory下的文件中的参数(eg. ${name}) -->
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
