--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,8 @@
         <module>bootstrap</module>
         <!-- 核心器 -->
         <module>core</module>
-        <!-- spring cloud 自动装配器 -->
-        <module>cloud-starter</module>
-        <!-- 日志 自动装配器 -->
-        <module>log-starter</module>
+        <!-- 组件 自动装配器 -->
+        <module>starter</module>
 
     </modules>
     <!-- 能让所有在子项目中引用一个依赖而不用显 式的列出版本号 -->
