--- a/bootstrap/src/main/resources/application.yml
+++ b/bootstrap/src/main/resources/application.yml
@@ -1,5 +1,34 @@
 spring:
   application:
     name: JavaBoot
+  # spring boot admin 配置
+  boot:
+    admin:
+      client:
+        # 服务端 url
+        url: http://127.0.0.1:9999
+        instance:
+          # 客户端实例 url
+          service-url: http://127.0.0.1:8888
+          # 客户端实例名称
+          name: JavaBoot
 server:
   port: 8888
+# spring boot admin 配置
+management:
+  endpoints:
+    web:
+      exposure:
+        # admin中暴漏的接口 - 所有接口
+        include: "*"
+  # 健康检查一直开启
+  endpoint:
+    health:
+      show-details: always
+# spring boot admin 配置日志文件
+logging:
+  file:
+    name: JavaBoot.log
+  pattern:
+    # 日志高亮
+    file: '%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} [%X{traceId}] %clr(%5p) %clr(${PID}){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n%wEx'
