--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -9,20 +9,12 @@ spring:
   # 邮件配置
   mail:
     host: smtp.qq.com
-    username: 2133283676@qq.com
-    password: rshhosifyezachee
+    username: 3360739100@qq.com
+    password: udjthezlfwcschdh
     properties:
-      mail:
-        smtl:
-          auth: true
-        starttls:
-          enable: true
-          required: true
-  boot:
-    admin:
-      notify:
-        mail:
-          to: 2133283676@qq.com
+        mail.smtp.auth: true # 启用SMTP认证
+        mail.smtp.starttls.enabled: true # 启用SMTP认证
+        mail.smtp.starttls.required: true # 必须采用加密链接
 server:
   port: 9999
 
