实现spring boot admin 在线查看日志

--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -10,7 +10,8 @@ spring:
   mail:
     host: smtp.qq.com
     username: 3360739100@qq.com
-    password: wofarsrgokqdciff
+    # 暂时不开启
+    # password: wofarsrgokqdciff
     properties:
       properties:
         mail:
