--- a/bootstrap/src/main/resources/application.yml
+++ b/bootstrap/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: JavaBoot
+    name: @artifactId@
   # spring boot admin 配置
   boot:
     admin:
@@ -11,7 +11,19 @@ spring:
           # 客户端实例 url
           service-url: http://127.0.0.1:8888
           # 客户端实例名称
-          name: JavaBoot
+          name: @artifactId@
+  cloud:
+    nacos:
+      username: @nacos.username@
+      password: @nacos.password@
+      discovery:
+        server-addr: ${NACOS_HOST:javaBoot-register}:${NACOS_PORT:8848}
+        config:
+          server-addr: ${spring.cloud.nacos.discovery.server-addr}
+  config:
+    import:
+      - nacos:application-@profiles.active@.yml
+      - nacos:${spring.application.name}-@profiles.active@.yml
 server:
   port: 8888
 # spring boot admin 配置
