--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,8 @@
                 <profiles.active>dev</profiles.active>
                 <nacos.username>nacos</nacos.username>
                 <nacos.password>nacos</nacos.password>
+                <admin.username>admin</admin.username>
+                <admin.password>admin</admin.password>
             </properties>
             <activation>
                 <!-- 默认环境 -->
