--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -1,11 +1,23 @@
 spring:
   application:
-    name: JavaBootAdmin
+    name: @artifactId@
   # 增加后台
   security:
     user:
-      name: "admin"
-      password: "admin"
+      name: @admin.username@
+      password: @admin.username@
+  cloud:
+    nacos:
+      username: @nacos.username@
+      password: @nacos.password@
+      discovery:
+        server-addr: ${NACOS_HOST:javaBoot-register}:${NACOS_PORT:8848}
+        config:
+          server-addr: ${spring.cloud.nacos.discovery.server-addr}
+    config:
+      import:
+        - nacos:application-@profiles.active@.yml
+        - nacos:${spring.application.name}-@profiles.active@.yml
   # 邮件配置
   mail:
     host: smtp.qq.com
