--- a/bootstrap/bootstrap-bootstrap/pom.xml
+++ b/bootstrap/bootstrap-bootstrap/pom.xml
@@ -1,26 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>io.javaboot</groupId>
-        <artifactId>javaboot</artifactId>
+        <artifactId>bootstrap</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <groupId>io.javaboot</groupId>
-    <artifactId>bootstrap</artifactId>
+    <artifactId>bootstrap-bootstrap</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <description>启动器</description>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>interface-bootstrap</module>
-        <module>adapter-bootstrap</module>
-        <module>bootstrap-bootstrap</module>
-    </modules>
+    <packaging>jar</packaging>
+    <description>bootstrap 启动器</description>
 
     <dependencies>
         <dependency>
@@ -69,4 +63,6 @@
             </resource>
         </resources>
     </build>
+
+
 </project>
