bootstrap模块中interface是关键字改为interfaces

--- a/bootstrap/interfaces-bootstrap/facade-interfaces-bootstrap/pom.xml
+++ b/bootstrap/interfaces-bootstrap/facade-interfaces-bootstrap/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>io.javaboot</groupId>
-        <artifactId>interface-bootstrap</artifactId>
+        <artifactId>interfaces-bootstrap</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
