bootstrap模块重新整理

--- a/bootstrap/interfaces-bootstrap/facade-interfaces-bootstrap/pom.xml
+++ b/bootstrap/interfaces-bootstrap/facade-interfaces-bootstrap/pom.xml
@@ -16,5 +16,11 @@
     <packaging>jar</packaging>
     <description>Bootstrap 接口层对外提供接口</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.javaboot</groupId>
+            <artifactId>log-starter</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
