--- a/bootstrap/interfaces-bootstrap/pom.xml
+++ b/bootstrap/interfaces-bootstrap/pom.xml
@@ -13,6 +13,7 @@
     <groupId>io.javaboot</groupId>
     <artifactId>interfaces-bootstrap</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <description>Bootstrap 接口层</description>
 
     <modules>
