--- a/bootstrap/adapter-bootstrap/interfaced-adapter-bootstrap/pom.xml
+++ b/bootstrap/adapter-bootstrap/interfaced-adapter-bootstrap/pom.xml
@@ -21,5 +21,9 @@
             <groupId>io.javaboot</groupId>
             <artifactId>facade-interfaces-bootstrap</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 </project>
