--- a/bootstrap/bootstrap-bootstrap/pom.xml
+++ b/bootstrap/bootstrap-bootstrap/pom.xml
@@ -22,10 +22,6 @@
             <artifactId>cloud-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-client</artifactId>
         </dependency>
@@ -33,6 +29,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.javaboot</groupId>
+            <artifactId>interfaced-adapter-bootstrap</artifactId>
         </dependency>
 
     </dependencies>
