--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
         <dependencies>
             <dependency>
                 <groupId>io.javaboot</groupId>
+                <artifactId>interfaced-adapter-bootstrap</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>io.javaboot</groupId>
                 <artifactId>facade-interfaces-bootstrap</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
